syntax = "proto3";

package api.v1.dealer;

import "common/common.proto";
import "api/v1/dealer/ball.proto";
import "google/protobuf/timestamp.proto";

option go_package = "g38_lottery_service/internal/generated/api/v1/dealer";

// GameData 包含遊戲信息
message GameData {
  string game_id = 1;
  string room_id = 2;
  common.GameStage stage = 3;
  GameStatus status = 4;
  repeated Ball regular_balls = 5;
  repeated Ball extra_balls = 6;
  Ball jackpot_ball = 7;
  repeated Ball lucky_balls = 8;
  int64 created_at = 9;
  int64 updated_at = 10;
  string dealer_id = 11;
  int32 extra_ball_count = 12;
  common.ExtraBallSide selected_side = 13;
  bool has_jackpot = 14;
  double jackpot = 15;
}

// JackpotGame 代表樂透遊戲的大獎相關資訊
message JackpotGame {
  // id 大獎ID
  string id = 1;
  
  // start_time 開始時間
  google.protobuf.Timestamp start_time = 2;
  
  // end_time 結束時間
  google.protobuf.Timestamp end_time = 3;
  
  // lucky_balls 幸運號碼球
  repeated Ball lucky_balls = 4;
  
  // drawn_balls 已抽出的大獎球
  repeated Ball drawn_balls = 5;
  
  // amount 獎金金額
  double amount = 6;
  
  // active 是否啟用
  bool active = 7;
  
  // winner_user_id 獲獎者ID
  string winner_user_id = 8;
  
  // winner_nickname 獲獎者暱稱
  string winner_nickname = 9;
  
  // win_amount 獲獎金額
  double win_amount = 10;
}

// GameStatus 表示遊戲狀態
enum GameStatus {
  GAME_STATUS_UNSPECIFIED = 0;
  GAME_STATUS_CREATED = 1;
  GAME_STATUS_IN_PROGRESS = 2;
  GAME_STATUS_COMPLETED = 3;
  GAME_STATUS_CANCELED = 4;
  GAME_STATUS_ERROR = 5;
  GAME_STATUS_PENDING = 6;
  GAME_STATUS_STARTED = 7;
  GAME_STATUS_READY = 8;
  GAME_STATUS_PAUSED = 9;
  GAME_STATUS_RESUMED = 10;
} 